# TrafficVision-AI

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: build-push.yml  ci.yml
Architecture Documents/: AGENT_BUILD_ORDER.md  API_CONTRACTS.md  CV_PIPELINE_SPEC.md  DATABASE_SCHEMA.md  DATASET_STRATEGY.md  DEPLOYMENT.md  EVALUATION_PLAN.md  MODEL_TRAINING_PLAN.md  PRD.md  PROJECT_VISION.md  SYSTEM_ARCHITECTURE.md  UI_UX_SPEC.md  VIOLATION_RULE_ENGINE.md
PROMPTS/: CLAUDE_MASTER_PROMPT.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  seed.py
backend/app/: config.py  database.py  main.py
backend/app/alembic/: env.py  script.py.mako
backend/app/api/: deps.py
backend/app/models/: __init__.py  audit_log.py  camera.py  user.py  violation.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_ingestion.py  test_violations.py
cv-pipeline/: Dockerfile  pyproject.toml  requirements.txt
cv-pipeline/app/: config.py  db.py  worker.py
cv-pipeline/app/mock/: mock_outputs.py
cv-pipeline/app/models/: __init__.py  iqa.py  ocr.py  tracker.py  yolo.py
cv-pipeline/app/pipeline/: orchestrator.py  rule_engine.py  stage_1_iqa.py  stage_2_detection.py  stage_3_secondary.py  stage_4_tracking.py  stage_5_lpd.py  stage_6_ocr.py  stage_7_rules.py
cv-pipeline/tests/: test_orchestrator.py  test_rule_engine.py
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
frontend/src/: App.tsx  index.css
(+30 files in other folders)
